--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+    <title>That Scott</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta name="viewport" content="width=device-width, intitial-scale=1.0">
+    <script type="text/javascript" src="methods.js"></script>
+</head>
+
+<body>
+    <header id="header" class="header-row">
+        <div id="menu-button" class="menu-button" onclick="openNav()">&#9776;</div>   
+        <h1>That Scott</h1>
+        <div id="side-nav" class="side-nav">
+            <div id="close-button" class="close-button" onclick="closeNav()">&times;</div>
+            <nav id="nav">
+                <ul id="nav-links" class="nav-links">
+                    <li><a href="#about" onclick="closeNav()">About</href></li>
+                    <li><a href="#knowledge_share" onclick="closeNav()">Knowledge Share</a></li>
+                    <li><a href="#tool_kit" onclick="closeNav()">Took Kit</a></li>
+                    <li><a href="#projects" onclick="closeNav()">Projects</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <div id="about">
+
+        </div>
+        <div id="knowledge_share">
+
+        </div>
+        <div id="tool_kit">
+
+        </div>
+        <div id="projects">
+
+        </div>
+
+    </main>
+
+    <footer>
+
+    </footer>
+</body>
+</html>
