committing files that weren't added last time

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>That Scott</title>
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -40,6 +40,8 @@
         <h1 style="font-family: Sansita Swashed;">That Scott</h1>
         <h1 style="font-family: Sansita;">That Scott</h1>
         <h1 style="font-family: Amaranth;">That Scott</h1>
+
+        <p id="currentWidth" onclick="getScreenWidth()">Get Screen Width</p>
 
         <div class="color-compare" style="background-color: #008075;"></div>
         <div class="color-compare" style="background-color: #ED0F30;"></div>
