styled tools section and projects section

--- a/index.html
+++ b/index.html
@@ -44,27 +44,132 @@
             <h2>Tool Kit</h2>
             <h3 id="languages-heading" class="tool-kit-subheading">Languages</h3>
             <ul id="languages-list" class="tools-list">
-                <li>Java</li>
-                <li>HTML5</li>
-                <li>CSS3</li>
+                <li>
+                    <div id="java-tool" class="tool-container red">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/java.png">
+                        </div>
+                    </div>
+                    Java
+                </li>
+                <li>
+                    <div id="html-tool" class="tool-container gray">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/html.png">
+                        </div>
+                    </div>
+                    HTML5
+                </li>
+                <li>
+                    <div id="css-tool" class="tool-container red">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/css.png">
+                        </div>
+                    </div>
+                    CSS3
+                </li>
             </ul>
             <h3 id="tools-heading" class="tool-kit-subheading">Tools</h3>
             <ul id="tools-list" class="tools-list">
-                <li>Selenium</li>
-                <li>Git</li>
-                <li>GitHub</li>
-                <li>VSCode</li>
-                <li>IntelliJ</li>
-                <li>Charles Proxy</li>
-                <li>Postman</li>
-                <li>Jira</li>
+                <li>
+                    <div id="selenium-tool" class="tool-container gray">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/selenium.png">
+                        </div>
+                    </div>
+                    Selenium
+                </li>
+                <li>
+                    <div id="git-tool" class="tool-container orange">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/git.png">
+                        </div>
+                    </div>
+                    Git
+                </li>
+                <li>
+                    <div id="github-tool" class="tool-container gray">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/github.png">
+                        </div>
+                    </div>
+                    GitHub
+                </li>
+                <li>
+                    <div id="vscode-tool" class="tool-container orange">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/vscode.png">
+                        </div>
+                    </div>
+                    VSCode
+                </li>
+                <li>
+                    <div id="intellij-tool" class="tool-container gray">
+                        <div class="inner-container">
+                         <img src="http://resources.thatscott.com/images/intellij.png">
+                        </div>
+                    </div>
+                    IntelliJ
+                </li>
+                <li>
+                    <div id="charles-proxy-tool" class="tool-container orange">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/charlesproxy.png">
+                        </div>
+                    </div>
+                    Charles Proxy
+                </li>
+                <li>
+                    <div id="postman-tool" class="tool-container gray">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/postman.png">
+                        </div>
+                    </div>
+                    Postman
+                </li>
+                <li>
+                    <div id="jira-tool" class="tool-container orange">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/jira.png">
+                        </div>
+                    </div>
+                    Jira
+                </li>
             </ul>
             <h3 id="horizon-heading" class="tool-kit-subheading">On the Horizon</h3>
             <ul id="horizon-list" class="tools-list">
-                <li>JavaScript</li>
-                <li>React</li>
-                <li>SQL</li>
-                <li>MobX</li>
+                <li>
+                    <div id="javascript-tool" class="tool-container yellow">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/javascript.png">
+                        </div>
+                    </div>
+                    JavaScript
+                </li>
+                <li>
+                    <div id="react-tool" class="tool-container gray">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/react.png">
+                        </div>
+                    </div>
+                    React
+                </li>
+                <li>
+                    <div id="sql-tool" class="tool-container yellow">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/sql.png">
+                        </div>
+                    </div>
+                    SQL
+                </li>
+                <li>
+                    <div id="mobx-tool" class="tool-container gray">
+                        <div class="inner-container">
+                            <img src="http://resources.thatscott.com/images/mobx.png">
+                        </div>
+                    </div>
+                    MobX
+                </li>
             </ul>
         </div>
         <div id="projects">
@@ -87,8 +192,9 @@
                     <div id="cat-survey-contents" class="project-contents">
                         <img src="images/cat-survey-screenshot.png" id="cat-survey-image" class="project-image">
                         <h3>Cat Survey</h3>
-                        <p id="cat-survey-description" class="project-description">A very important survey about cats! Implements several kinds of form fields.</p>
+                        <p id="cat-survey-description" class="project-description">A very important survey about cats!</p>
                         <ul>
+                            <li>Implements several kinds of form fields.</li>
                             <li>Custom-styled radio buttons and checkboxes</li>
                             <li>HTML & CSS</li>
                         </ul>
