styled tool kit section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <img src="http://resources.thatscott.com/images/charlesproxy.png">
                         </div>
                     </div>
-                    Charles Proxy
+                    Charles
                 </li>
                 <li>
                     <div id="postman-tool" class="tool-container gray">
