--- a/index.html
+++ b/index.html
@@ -43,6 +43,11 @@
     <main>
         <div id="about">
             <h2>About Me</h2>
+            <div id="about-description" class="about-description">
+                <p>Hi, I’m Scott! I’m a quality assurance engineer who writes code. I use my attention to detail and user experience knowledge from testing apps to create thoughtfully designed, quality sites. I like to take complex problems and break them down into small, simple pieces. I strive to make my code simple to write, understand, and maintain.</p>
+                <p>With each new project I try to experiment with new ideas to continually grow my skills. I’m always learning new things and excited to continue this journey.</p>
+                <p>When I’m not writing code I enjoy playing with my cats, enjoying all things breakfast, running, and playing board games.</p>
+            </div>
         </div>
         <div id="tool-kit" class="tool-kit">
             <h2>Tool Kit</h2>
