styled about me section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>That Scott</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@700;800;900&family=Hind+Siliguri&family:wght@400;500;600&family=Pattaya&family=Sansita:wght@400;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@700;800;900&family=Hind+Siliguri&family:wght@400;500;600;700&family=Pattaya&family=Sansita:wght@400;700;800&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="http://resources.thatscott.com/images/that-logo.png">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <script type="text/javascript" src="methods.js"></script>
@@ -44,9 +44,9 @@
         <div id="about">
             <h2>About Me</h2>
             <div id="about-description" class="about-description">
-                <p>Hi, I’m Scott! I’m a quality assurance engineer who writes code. I use my attention to detail and user experience knowledge from testing apps to create thoughtfully designed, quality sites. I like to take complex problems and break them down into small, simple pieces. I strive to make my code simple to write, understand, and maintain.</p>
-                <p>With each new project I try to experiment with new ideas to continually grow my skills. I’m always learning new things and excited to continue this journey.</p>
-                <p>When I’m not writing code I enjoy playing with my cats, enjoying all things breakfast, running, and playing board games.</p>
+                <p><span class="red-text">Hi, I’m Scott.</span> I'm a quality assurance engineer who writes code. I use my attention to detail and user experience knowledge from testing apps to create thoughtfully designed, quality sites. I strive to make my code simple to write, understand, and maintain.</p>
+                <p>With each new project I try to experiment with new ideas to grow my skills. I’m always learning new things and excited to continue this journey.</p>
+                <p>When I’m not writing code I enjoy playing with my cats, breakfasting, running, and playing board games.</p>
             </div>
         </div>
         <div id="tool-kit" class="tool-kit">
