adjusted about me section wording

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div id="about">
             <h2>About Me</h2>
             <div id="about-description" class="about-description">
-                <p><span class="red-text">Hi, I’m Scott.</span> I'm a quality assurance engineer who writes code. I use my attention to detail and user experience knowledge from testing apps to create thoughtfully designed, quality sites. I strive to make my code simple to write, understand, and maintain.</p>
+                <p><span class="red-text">Hi, I’m Scott,</span> a quality assurance engineer who writes code. I use my attention to detail and user experience knowledge from testing apps to create thoughtfully designed, quality sites. I strive to make my code simple to write, understand, and maintain.</p>
                 <p>With each new project I try to experiment with new ideas and technologies. I’m always learning new skills and excited to continue this journey.</p>
                 <p>When I’m not writing code I enjoy playing with my cats, breakfasting, running, and playing board games.</p>
             </div>
