--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div id="close-button" class="close-button" onclick="closeNav()">&times;</div>
                     <nav id="nav">
                         <ul id="nav-links" class="nav-links">
-                            <li><a href="#about" onclick="closeNav()">About</href></li>
+                            <li><a href="#about" onclick="closeNav()">About</a></li>
                             <li><a href="#tool-kit" onclick="closeNav()">Tool Kit</a></li>
                             <li><a href="#projects" onclick="closeNav()">Projects</a></li>
                             <li><a href="#blogs" onclick="closeNav()">Blogs</a></li>
@@ -45,7 +45,7 @@
             <h2>About Me</h2>
             <div id="about-description" class="about-description">
                 <p><span class="red-text">Hi, I’m Scott,</span> a quality assurance engineer who writes code. I use my attention to detail and user experience knowledge from testing apps to create thoughtfully designed, quality sites. I strive to make my code simple to write, understand, and maintain.</p>
-                <p>With each new project I try to experiment with new ideas and technologies. I’m always learning new skills and excited to continue this journey.</p>
+                <p>With each project I try to experiment with new ideas and technologies. I’m always learning new skills and excited to continue this journey.</p>
                 <p>When I’m not writing code I enjoy playing with my cats, breakfasting, running, and playing board games.</p>
             </div>
         </div>
@@ -56,15 +56,15 @@
                 <li>
                     <div id="java-tool" class="tool-container red">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/java.png">
+                            <img src="http://resources.thatscott.com/images/java.png" alt="">
                         </div>
                     </div>
                     Java
                 </li>
                 <li>
-                    <div id="html-tool" class="tool-container gray">
+                    <div id="html-tool" class="tool-container blue">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/html.png">
+                            <img src="http://resources.thatscott.com/images/html.png" alt="">
                         </div>
                     </div>
                     HTML5
@@ -72,7 +72,7 @@
                 <li>
                     <div id="css-tool" class="tool-container red">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/css.png">
+                            <img src="http://resources.thatscott.com/images/css.png" alt="">
                         </div>
                     </div>
                     CSS3
@@ -81,9 +81,9 @@
             <h3 id="tools-heading" class="tool-kit-subheading">Tools</h3>
             <ul id="tools-list" class="tools-list">
                 <li>
-                    <div id="selenium-tool" class="tool-container gray">
+                    <div id="selenium-tool" class="tool-container blue">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/selenium.png">
+                            <img src="http://resources.thatscott.com/images/selenium.png" alt="">
                         </div>
                     </div>
                     Selenium
@@ -91,15 +91,15 @@
                 <li>
                     <div id="git-tool" class="tool-container orange">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/git.png">
+                            <img src="http://resources.thatscott.com/images/git.png" alt="">
                         </div>
                     </div>
                     Git
                 </li>
                 <li>
-                    <div id="github-tool" class="tool-container gray">
+                    <div id="github-tool" class="tool-container blue">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/github.png">
+                            <img src="http://resources.thatscott.com/images/github.png" alt="">
                         </div>
                     </div>
                     GitHub
@@ -107,15 +107,15 @@
                 <li>
                     <div id="vscode-tool" class="tool-container orange">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/vscode.png">
+                            <img src="http://resources.thatscott.com/images/vscode.png" alt="">
                         </div>
                     </div>
                     VSCode
                 </li>
                 <li>
-                    <div id="intellij-tool" class="tool-container gray">
+                    <div id="intellij-tool" class="tool-container blue">
                         <div class="inner-container">
-                         <img src="http://resources.thatscott.com/images/intellij.png">
+                         <img src="http://resources.thatscott.com/images/intellij.png" alt="">
                         </div>
                     </div>
                     IntelliJ
@@ -123,15 +123,15 @@
                 <li>
                     <div id="charles-proxy-tool" class="tool-container orange">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/charlesproxy.png">
+                            <img src="http://resources.thatscott.com/images/charlesproxy.png" alt="">
                         </div>
                     </div>
                     Charles
                 </li>
                 <li>
-                    <div id="postman-tool" class="tool-container gray">
+                    <div id="postman-tool" class="tool-container blue">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/postman.png">
+                            <img src="http://resources.thatscott.com/images/postman.png" alt="">
                         </div>
                     </div>
                     Postman
@@ -139,7 +139,7 @@
                 <li>
                     <div id="jira-tool" class="tool-container orange">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/jira.png">
+                            <img src="http://resources.thatscott.com/images/jira.png" alt="">
                         </div>
                     </div>
                     Jira
@@ -150,15 +150,15 @@
                 <li>
                     <div id="javascript-tool" class="tool-container yellow">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/javascript.png">
+                            <img src="http://resources.thatscott.com/images/javascript.png" alt="">
                         </div>
                     </div>
                     JavaScript
                 </li>
                 <li>
-                    <div id="react-tool" class="tool-container gray">
+                    <div id="react-tool" class="tool-container blue">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/react.png">
+                            <img src="http://resources.thatscott.com/images/react.png" alt="">
                         </div>
                     </div>
                     React
@@ -166,15 +166,15 @@
                 <li>
                     <div id="sql-tool" class="tool-container yellow">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/sql.png">
+                            <img src="http://resources.thatscott.com/images/sql.png" alt="">
                         </div>
                     </div>
                     SQL
                 </li>
                 <li>
-                    <div id="mobx-tool" class="tool-container gray">
+                    <div id="mobx-tool" class="tool-container blue">
                         <div class="inner-container">
-                            <img src="http://resources.thatscott.com/images/mobx.png">
+                            <img src="http://resources.thatscott.com/images/mobx.png" alt="">
                         </div>
                     </div>
                     MobX
@@ -186,7 +186,7 @@
             <div id="project-list" class="project-list">
                 <div id="slurm-project" class="project-tile">
                     <div id="slurm-contents" class="project-contents">
-                        <img src="images/slurm-screenshot.png" id="slurm-image" class="project-image">
+                        <a href="https://thatscott.com/slurm/"><img src="images/slurm-screenshot.png" id="slurm-image" class="project-image"></a>
                         <h3>Slurm Landing Page</h3>
                         <p id="slurm-description" class="project-description">A product landing page for a fictitious contest from the television show, Futurama.</p>
                         <ul>
@@ -195,11 +195,11 @@
                             <li>HTML, CSS, & JavaScript</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/slurm/" id="slurm-view-project-link" aria-labelledby="view slurm project">View Project</a>
+                    <a href="https://thatscott.com/slurm/" id="slurm-view-project-link" aria-labelledby="view slurm project" class="project-link">View Project</a>
                 </div>
                 <div id="cat-survey-project" class="project-tile">
                     <div id="cat-survey-contents" class="project-contents">
-                        <img src="images/cat-survey-screenshot.png" id="cat-survey-image" class="project-image">
+                        <a href="https://thatscott.com/cat-survey/"><img src="images/cat-survey-screenshot.png" id="cat-survey-image" class="project-image"></a>
                         <h3>Cat Survey</h3>
                         <p id="cat-survey-description" class="project-description">A very important survey about cats!</p>
                         <ul>
@@ -208,11 +208,11 @@
                             <li>HTML & CSS</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/cat-survey/" id="slurm-view-project-link" aria-labelledby="view cat survey project">View Project</a>
+                    <a href="https://thatscott.com/cat-survey/" id="cat-survey-view-project-link" aria-labelledby="view cat survey project" class="project-link">View Project</a>
                 </div>
                 <div id="jim-henson-project" class="project-tile">
                     <div id="jim-henson-contents" class="project-contents">
-                        <img src="images/jim-henson-screenshot.png" id="jim-henson-image" class="project-image">
+                        <a href="https://thatscott.com/jim-henson/"><img src="images/jim-henson-screenshot.png" id="jim-henson-image" class="project-image"></a>
                         <h3>Jim Henson</h3>
                         <p id="jim-henson-description" class="project-description">My first webpage! This simple site chronicles the life of Jim Henson, creator of The Muppets.</p>
                         <ul>
@@ -221,11 +221,11 @@
                             <li>HTML & CSS</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/jim-henson/" id="jim-henson-view-project-link" aria-labelledby="view jim henson project">View Project</a>
+                    <a href="https://thatscott.com/jim-henson/" id="jim-henson-view-project-link" aria-labelledby="view jim henson project" class="project-link">View Project</a>
                 </div>
                 <div id="js-documentation-project" class="project-tile">
                     <div id="js-contents" class="project-contents">
-                        <img src="images/js-documentation-screenshot.png" id="js-documentation-image" class="project-image">
+                        <a href="https://thatscott.com/js-documentation/"><img src="images/js-documentation-screenshot.png" id="js-documentation-image" class="project-image"></a>
                         <h3>JavaScript Technical Documentation</h3>
                         <p id="js-documentation-description" class="project-description">A technical documentation site for the JavaScript programming language, based on information provided by Mozilla.</p>
                         <ul>
@@ -234,7 +234,7 @@
                             <li>HTML, CSS, & Javascript</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/js-documentation/" id="js-documentation-view-project-link" aria-labelledby="view javascript technical documenation project">View Project</a>
+                    <a href="https://thatscott.com/js-documentation/" id="js-documentation-view-project-link" aria-labelledby="view javascript technical documenation project" class="project-link">View Project</a>
                 </div>
             </div>
         </div>
