adjusted hover states on project tiles

--- a/index.html
+++ b/index.html
@@ -195,7 +195,9 @@
                             <li>HTML, CSS, & JavaScript</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/slurm/" id="slurm-view-project-link" aria-labelledby="view slurm project" class="project-link">View Project</a>
+                    <div class="project-link-container">
+                        <a href="https://thatscott.com/slurm/" id="slurm-view-project-link" aria-labelledby="view slurm project" class="project-link">View Project</a>
+                    </div>
                 </div>
                 <div id="cat-survey-project" class="project-tile">
                     <div id="cat-survey-contents" class="project-contents">
@@ -208,7 +210,9 @@
                             <li>HTML & CSS</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/cat-survey/" id="cat-survey-view-project-link" aria-labelledby="view cat survey project" class="project-link">View Project</a>
+                    <div class="project-link-container">
+                        <a href="https://thatscott.com/cat-survey/" id="cat-survey-view-project-link" aria-labelledby="view cat survey project" class="project-link">View Project</a>
+                    </div>
                 </div>
                 <div id="jim-henson-project" class="project-tile">
                     <div id="jim-henson-contents" class="project-contents">
@@ -221,11 +225,15 @@
                             <li>HTML & CSS</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/jim-henson/" id="jim-henson-view-project-link" aria-labelledby="view jim henson project" class="project-link">View Project</a>
+                    <div class="project-link-container">
+                        <a href="https://thatscott.com/jim-henson/" id="jim-henson-view-project-link" aria-labelledby="view jim henson project" class="project-link">View Project</a>
+                    </div>
                 </div>
                 <div id="js-documentation-project" class="project-tile">
                     <div id="js-contents" class="project-contents">
-                        <a href="https://thatscott.com/js-documentation/"><img src="images/js-documentation-screenshot.png" id="js-documentation-image" class="project-image"></a>
+                        <a href="https://thatscott.com/js-documentation/" class="project-image">
+                            <img src="images/js-documentation-screenshot.png" id="js-documentation-image">
+                        </a>
                         <h3>JavaScript Technical Documentation</h3>
                         <p id="js-documentation-description" class="project-description">A technical documentation site for the JavaScript programming language, based on information provided by Mozilla.</p>
                         <ul>
@@ -234,7 +242,9 @@
                             <li>HTML, CSS, & Javascript</li>
                         </ul>
                     </div>
-                    <a href="https://thatscott.com/js-documentation/" id="js-documentation-view-project-link" aria-labelledby="view javascript technical documenation project" class="project-link">View Project</a>
+                    <div class="project-link-container">
+                        <a href="https://thatscott.com/js-documentation/" id="js-documentation-view-project-link" aria-labelledby="view javascript technical documenation project" class="project-link">View Project</a>
+                    </div>
                 </div>
             </div>
         </div>
