--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans:wght@700;800;900&family=Hind+Siliguri&family:wght@400;500;600;700&family=Pattaya&family=Sansita:wght@400;700;800&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" src="http://resources.thatscott.com/images/that-logo.png">
+    <link rel="icon" type="image/png" href="images/that-logo.png">
     <meta name="viewport" content="width=device-width, intitial-scale=1.0">
     <script type="text/javascript" src="methods.js"></script>
     <script src="https://kit.fontawesome.com/1688e54e34.js" crossorigin="anonymous"></script>
@@ -183,6 +183,7 @@
         </div>
         <div id="projects">
             <h2>Projects</h2>
+            <!-- Project screenshots have a 4:3 aspect ratio -->
             <div id="project-list" class="project-list">
                 <div id="slurm-project" class="project-tile">
                     <div id="slurm-contents" class="project-contents">
