updated screenshot images to link to resources.thatscott.com

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div id="project-list" class="project-list">
                 <div id="slurm-project" class="project-tile">
                     <div id="slurm-contents" class="project-contents">
-                        <a href="https://thatscott.com/slurm/"><img src="images/slurm-screenshot.png" id="slurm-image" class="project-image"></a>
+                        <a href="https://thatscott.com/slurm/"><img src="http://resources.thatscott.com/images/slurm-screenshot.png" id="slurm-image" class="project-image"></a>
                         <h3>Slurm Landing Page</h3>
                         <p id="slurm-description" class="project-description">A product landing page for a fictitious contest from the television show, Futurama.</p>
                         <ul>
@@ -202,7 +202,7 @@
                 </div>
                 <div id="cat-survey-project" class="project-tile">
                     <div id="cat-survey-contents" class="project-contents">
-                        <a href="https://thatscott.com/cat-survey/"><img src="images/cat-survey-screenshot.png" id="cat-survey-image" class="project-image"></a>
+                        <a href="https://thatscott.com/cat-survey/"><img src="http://resources.thatscott.com/images/cat-survey-screenshot.png" id="cat-survey-image" class="project-image"></a>
                         <h3>Cat Survey</h3>
                         <p id="cat-survey-description" class="project-description">A very important survey about cats!</p>
                         <ul>
@@ -217,7 +217,7 @@
                 </div>
                 <div id="jim-henson-project" class="project-tile">
                     <div id="jim-henson-contents" class="project-contents">
-                        <a href="https://thatscott.com/jim-henson/"><img src="images/jim-henson-screenshot.png" id="jim-henson-image" class="project-image"></a>
+                        <a href="https://thatscott.com/jim-henson/"><img src="http://resources.thatscott.com/images/jim-henson-screenshot.png" id="jim-henson-image" class="project-image"></a>
                         <h3>Jim Henson</h3>
                         <p id="jim-henson-description" class="project-description">My first webpage! This simple site chronicles the life of Jim Henson, creator of The Muppets.</p>
                         <ul>
@@ -233,7 +233,7 @@
                 <div id="js-documentation-project" class="project-tile">
                     <div id="js-contents" class="project-contents">
                         <a href="https://thatscott.com/js-documentation/" class="project-image">
-                            <img src="images/js-documentation-screenshot.png" id="js-documentation-image">
+                            <img src="http://resources.thatscott.com/images/js-documentation-screenshot.png" id="js-documentation-image">
                         </a>
                         <h3>JavaScript Technical Documentation</h3>
                         <p id="js-documentation-description" class="project-description">A technical documentation site for the JavaScript programming language, based on information provided by Mozilla.</p>
